@@ -8,8 +8,8 @@ simple PTPNode
         volatile int MasterMACaddress;
         volatile int ptpNode;
         bool debug; // debug switch
-        int localPort1 = default(819);
-        int localPort2 = default(820);
+        int localPort1 = default(319);
+        int localPort2 = default(320);
     gates:
         input in_event;
         input in_general;
