@@ -1,2 +1,0 @@
-[General]
-network = xsimulator.PtpNetwork
