@@ -1,10 +1,10 @@
 enum UDPCommandCode
 {
 
-    UDP_C_DATA = 0;    // datagram to send (must carry UDPControlInfo)
-    UDP_C_BIND = 1;    // fill srcPort and srcAddr in UDPControlInfo
-    UDP_C_CONNECT = 2; // fill destAddr and destPort in UDPControlInfo
-    UDP_C_UNBIND = 3;  // fill sockId in UDPControlInfo
+    UDP_C_DATA = 1000;    // datagram to send (must carry UDPControlInfo)
+    UDP_C_BIND = 1001;    // fill srcPort and srcAddr in UDPControlInfo
+    UDP_C_CONNECT = 1002; // fill destAddr and destPort in UDPControlInfo
+    UDP_C_UNBIND = 1003;  // fill sockId in UDPControlInfo
 }
 
 class transpCInfo
