@@ -199,7 +199,8 @@ sim-time-limit = 60s
 **.host[*].appl.burstSize = 3
 **.host[*].appl.waitBeforeSend = 100
 
-**.node[0].arp.macAddress =100
+**.node[0].arp.macAddress =1
+
 **.node[1].arp.macAddress =101
 **.node[2].arp.macAddress =102
 **.node[3].arp.macAddress =103
@@ -213,14 +214,16 @@ sim-time-limit = 60s
 **.master.appl.localPort = 2450
 **.master.appl.localCPort = 2451
 **.master.master.debug = true
-**.master.arp.macAddress =100
+**.master.Mclock.debug = true
+**.master.arp.macAddress =2
 
 **.node[0].slave.slave.debug = true
+**.node[0].slave.Sclock.debug = true
 **.node[0].appl.destination = 101
 **.node[1].appl.destination = 102
 **.node[2].appl.destination = 103
 **.node[3].appl.destination = 104
-**.node[4].appl.destination = 100
+**.node[4].appl.destination = 1
 
 **.fakePTP.myAddr = 20
 **.fakePTP.packetTime = 200ms
