@@ -3,3 +3,6 @@ Changes added by trama:
 - PTPNode are a subclass of BaseModule (only to support better debugging info)
 - included tutils to support EVT
 - splitted in master and slave node: defined two compound module along with their connections
+- corrected port number and added bind procedure
+- defined Master and Slave node which contain master and slave app respectively
+- adjusted message creation
